windows/Generated/safeparts_uniffi.cs


// This is an implementation detail that will be called internally by the public API.
#if NET8_0_OR_GREATER
static partial class _UniFFILib {
#else
static class _UniFFILib {
#endif
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiRustFutureContinuationCallback(
        ulong @data,sbyte @pollResult
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureDroppedCallback(
        ulong @handle
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceFree(
        ulong @handle
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate ulong UniffiCallbackInterfaceClone(
        ulong @handle
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureDroppedCallbackStruct
    {
        public ulong @handle;
        public IntPtr @free;
    }
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU8
    {
        public byte @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU8(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU8 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI8
    {
        public sbyte @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI8(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI8 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU16
    {
        public ushort @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU16(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU16 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI16
    {
        public short @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI16(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI16 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU32
    {
        public uint @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI32
    {
        public int @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU64
    {
        public ulong @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI64
    {
        public long @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultF32
    {
        public float @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteF32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultF32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultF64
    {
        public double @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteF64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultF64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultRustBuffer
    {
        public RustBuffer @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteRustBuffer(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultRustBuffer @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultVoid
    {
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteVoid(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultVoid @result
    );




























































    static _UniFFILib() {
        _UniFFILib.uniffiCheckContractApiVersion();
        _UniFFILib.uniffiCheckApiChecksums();

        }

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_safeparts_uniffi_fn_func_combine_share_input(RustBuffer @input,RustBuffer @selected,RustBuffer @passphrase,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_safeparts_uniffi_fn_func_inspect_share_input(RustBuffer @input,RustBuffer @selected,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer uniffi_safeparts_uniffi_fn_func_split_secret(RustBuffer @secret,byte @threshold,byte @shareCount,RustBuffer @selected,RustBuffer @passphrase,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer ffi_safeparts_uniffi_rustbuffer_alloc(ulong @size,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer ffi_safeparts_uniffi_rustbuffer_from_bytes(ForeignBytes @bytes,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rustbuffer_free(RustBuffer @buf,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     RustBuffer ffi_safeparts_uniffi_rustbuffer_reserve(RustBuffer @buf,ulong @additional,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_u8(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_u8(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_u8(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     byte ffi_safeparts_uniffi_rust_future_complete_u8(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_poll_i8(ulong @handle,IntPtr @callback,ulong @callbackData
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_cancel_i8(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void ffi_safeparts_uniffi_rust_future_free_i8(ulong @handle
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("safeparts_uniffi")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("safeparts_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     sbyte ffi_safeparts_uniffi_rust_future_complete_i8(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );
